quality of life changes

--- a/frontend/css/examone.css
+++ b/frontend/css/examone.css
@@ -210,3 +210,9 @@ ul>.input_options:hover {
     background-color: #5cb874;
     transition: .7s;
 }
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
