fixed home page and added temp phy and chem exams

--- a/frontend/views/examchem.ejs
+++ b/frontend/views/examchem.ejs
@@ -63,16 +63,16 @@
     <div class="questions">
         <p class="questionstext">Questions:</p>
         <div class="questionscontainer">
-            <button class="ques">1</button>
-            <button class="ques">2</button>
-            <button class="ques">3</button>
-            <button class="ques">4</button>
-            <button class="ques">5</button>
-            <button class="ques">6</button>
-            <button class="ques">7</button>
-            <button class="ques">8</button>
-            <button class="ques">9</button>
-            <button class="ques">10</button>
+            <button class="ques redques">1</button>
+            <button class="ques redques">2</button>
+            <button class="ques redques">3</button>
+            <button class="ques redques">4</button>
+            <button class="ques redques">5</button>
+            <button class="ques redques">6</button>
+            <button class="ques redques">7</button>
+            <button class="ques redques">8</button>
+            <button class="ques redques">9</button>
+            <button class="ques redques">10</button>
         </div>
         <div class="submitcontainer">
             <button type="finish" id="finish">Submit</button>
@@ -83,7 +83,7 @@
 <!-- <div class="submitcontainer">
     <button type="finish" class="finish">Submit</button>
 </div> -->
-<script src="../js/examone.js"></script>
+<script src="../js/exammaths.js"></script>
 </body>
 
 </html>
