--- a/frontend/css/examone.css
+++ b/frontend/css/examone.css
@@ -66,7 +66,7 @@ main {
     background-color: white;
     width: 800px;
     border-radius: 10px;
-    height: 60%;
+    height: 70%;
     /* box-shadow: 1px 1px 10px 2px rgba(100, 100, 100, 0.8); */
 
 }
@@ -231,4 +231,46 @@ ul>.input_options:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.resquescontainer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.indexques {
+    padding: 5px;
+    /* border: 1px solid black; */
+    width: 10%;
+}
+
+.resques {
+    padding: 5px;
+    /* border: 1px solid black; */
+    width: 35%;
+}
+
+.ansques {
+    padding: 5px;
+    /* border: 1px solid black; */
+    width: 35%;
+}
+
+#answers {
+    text-align: center;
+    width: 50%;
+    padding: 12px;
+    margin-top: 10px;
+    background-color: #59adff;
+    font-size: 20px;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+#answers:hover {
+    background-color: #5cb874;
+    transition: .7s;
 }
