added chem and phy and solutions

--- a/frontend/css/examone.css
+++ b/frontend/css/examone.css
@@ -268,6 +268,7 @@ ul>.input_options:hover {
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 #answers:hover {
