--- a/frontend/css/solution.css
+++ b/frontend/css/solution.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
     background-color: #483285;
@@ -28,6 +29,7 @@
 
 .title {
     font-size: 24px;
+    font-weight: 700;
 }
 
 ul {
@@ -37,4 +39,25 @@ ul {
 
 .ans {
     font-size: 20px;
+    font-weight: 600;
+}
+
+.home {
+    text-align: center;
+    width: 100%;
+    padding: 12px;
+    margin-top: 10px;
+    background-color: #59adff;
+    font-size: 20px;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.homecontainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
