--- a/frontend/views/examphy.ejs
+++ b/frontend/views/examphy.ejs
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/examone.css">
-    <title>Maths</title>
+    <title>Physics</title>
 </head>
 <!-- <body>
     <header>
@@ -83,7 +83,7 @@
 <!-- <div class="submitcontainer">
     <button type="finish" class="finish">Submit</button>
 </div> -->
-<script src="../js/exammaths.js"></script>
+<script src="../js/examphy.js"></script>
 </body>
 
 </html>
