--- a/frontend/views/exammaths.ejs
+++ b/frontend/views/exammaths.ejs
@@ -27,8 +27,13 @@
             </div>            
         </nav>
     </header> -->
+<div class="countdowncontainer">
+    <p id="countdown"></p>
+</div>
 <main class="quiz_sect_wrap">
+
     <div class="sect_container">
+
         <div id="quiz">
             <h2 id="question">Question</h2>
             <ul id="ul_container">
