--- a/frontend/views/examphy.ejs
+++ b/frontend/views/examphy.ejs
@@ -27,6 +27,9 @@
             </div>            
         </nav>
     </header> -->
+<div class="countdowncontainer">
+    <p id="countdown"></p>
+</div>
 <main class="quiz_sect_wrap">
     <div class="sect_container">
         <div id="quiz">
