--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -23,6 +23,8 @@ a:hover {
   text-decoration: none;
 }
 
+
+
 h1,
 h2,
 h3,
@@ -1163,7 +1165,7 @@ section {
 
 .team .member img {
   max-width: 60%;
-  border-radius: 0%;
+  border-radius: 30px;
   margin: 0 0 30px 0;
   object-fit: cover;
 }
@@ -1426,4 +1428,8 @@ section {
 
 #footer .credits {
   font-size: 13px;
+}
+
+.defimg {
+  border-radius: 100px;
 }
